--- a/scss/block/_footer.scss
+++ b/scss/block/_footer.scss
@@ -91,15 +91,15 @@
 }
 
 .footer__social__link:nth-child(1) {
-    background-image: url(/img/whatsapp.svg);
+    background-image: url(../img/whatsapp.svg);
 }
 
 .footer__social__link:nth-child(2) {
-    background-image: url(/img/telegram.svg);
+    background-image: url(../img/telegram.svg);
 }
 
 .footer__social__link:nth-child(3) {
-    background-image: url(/img/vk.svg);
+    background-image: url(../img/vk.svg);
 }
 
 .box4__text__block {
@@ -242,7 +242,7 @@
             width: 26px;
             height: 30px;
             background-repeat: no-repeat;
-            background-image: url(/img/logo.svg);
+            background-image: url(../img/logo.svg);
             background-position: center;
             background-size: cover;
             left: 0;
