--- a/scss/block/_products.scss
+++ b/scss/block/_products.scss
@@ -21,7 +21,7 @@
 .favorite__product {
     padding: 12px;
     background-repeat: no-repeat;
-    background-image: url(/img/product-heart.svg);
+    background-image: url(../img/product-heart.svg);
 }
 
 .product__links {
@@ -33,7 +33,7 @@
 .copy__product {
     padding: 12px;
     background-repeat: no-repeat;
-    background-image: url(/img/product-copy.svg);
+    background-image: url(../img/product-copy.svg);
 }
 
 .products__list {
@@ -69,7 +69,7 @@
         width: 125px;
         height: 24px;
         background-repeat: no-repeat;
-        background-image: url(/img/stars.svg);
+        background-image: url(../img/stars.svg);
         display: inline-block;
     }
 }
@@ -107,7 +107,7 @@
         width: 16px;
         height: 16px;
         background-repeat: no-repeat;
-        background-image: url(/img/green-circle.svg);
+        background-image: url(../img/green-circle.svg);
         display: inline-block;
         margin-right: 5px;
     }
@@ -158,7 +158,7 @@
         width: 24px;
         height: 24px;
         background-repeat: no-repeat;
-        background-image: url(/img/cart-plus.svg);
+        background-image: url(../img/cart-plus.svg);
         background-position: center;
         display: inline-block;
     }
@@ -217,7 +217,7 @@
         width: 16px;
         height: 16px;
         background-repeat: no-repeat;
-        background-image: url(/img/blue-circle.svg);
+        background-image: url(../img/blue-circle.svg);
         display: inline-block;
     }
 }
@@ -261,7 +261,7 @@
         width: 24px;
         height: 24px;
         background-repeat: no-repeat;
-        background-image: url(/img/cart-plus.svg);
+        background-image: url(../img/cart-plus.svg);
         display: inline-block;
     }
 }
