--- a/scss/block/_services.scss
+++ b/scss/block/_services.scss
@@ -23,7 +23,7 @@
         width: 160px;
         height: 160px;
         background-repeat: no-repeat;
-        background-image: url(/img/services1.png);
+        background-image: url(../img/services1.png);
         background-position: center;
         display: inline-block;
         margin-bottom: 16px;
@@ -183,7 +183,7 @@
             width: 32px;
             height: 32px;
             background-repeat: no-repeat;
-            background-image: url(/img/services2.png);
+            background-image: url(../img/services2.png);
             background-position: center;
             background-size: cover;
             display: inline-block;
