--- a/scss/block/_hero.scss
+++ b/scss/block/_hero.scss
@@ -37,7 +37,7 @@
     top: 50%;
     transform: translateY(-50%);
     background-repeat: no-repeat;
-    background-image: url(/img/slide-right.svg);
+    background-image: url(../img/slide-right.svg);
     background-position: center;
     background-color: transparent;
     cursor: pointer;
