one element changed

--- a/scss/block/_header.scss
+++ b/scss/block/_header.scss
@@ -99,6 +99,12 @@
     text-align: end;
 }
 
+.phone__link {
+    color: $prime;
+    font-size: 16px;
+    font-weight: 400;
+}
+
 
 .main_header__link {
     color: $black;
