--- a/css/main.css
+++ b/css/main.css
@@ -223,6 +223,12 @@ body {
   text-align: end;
 }
 
+.phone__link {
+  color: #0071E4;
+  font-size: 16px;
+  font-weight: 400;
+}
+
 .main_header__link {
   color: #100E0E;
   padding-bottom: 3px;
