Update hero section

--- a/scss/block/_hero.scss
+++ b/scss/block/_hero.scss
@@ -23,7 +23,7 @@
     top: 50%;
     transform: translateY(-50%);
     background-repeat: no-repeat;
-    background-image: url(/img/slide-left.svg);
+    background-image: url(../img/slide-left.svg);
     background-position: center;
     background-color: transparent;
     cursor: pointer;
